--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     }
   ],
   "dependencies": {
-    "@angular/common": "~2.2.0",
-    "@angular/compiler": "~2.2.0",
+    "@angular/common": "~2.2.1",
+    "@angular/compiler": "~2.2.1",
     "@angular/core": "~2.2.0",
     "@angular/forms": "~2.2.0",
     "@angular/http": "~2.2.0",
-    "@angular/platform-browser": "~2.2.0",
+    "@angular/platform-browser": "~2.2.1",
     "@angular/platform-browser-dynamic": "~2.2.0",
-    "@angular/router": "~3.2.0",
+    "@angular/router": "~3.2.2",
     "@angular/upgrade": "~2.2.0",
     "angular-in-memory-web-api": "~0.1.15",
     "core-js": "^2.4.1",
+    "materialize-css": "^0.97.8",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
